typescript/checker/tests/conformance/async/es2017/awaitClassExpression_es2017.ts.stderr
error: unimplemented
expand_export_info(Promise)
File: $DIR/tests/conformance/async/es2017/awaitClassExpression_es2017.ts
 --> $DIR/tests/conformance/async/es2017/awaitClassExpression_es2017.ts:6:1
  |
6 | / async function func(): Promise<void> {
7 | |     class D extends (await p) {
8 | |     }
9 | | }
  | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            124,
        ),
        hi: BytePos(
            139,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es2017/awaitClassExpression_es2017.ts:6:22
  |
6 | async function func(): Promise<void> {
  |                      ^^^^^^^^^^^^^^^

